# bin_diff_tool

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: cli.rs  lib.rs  main.rs  patch.rs  utils.rs
src/patch/: apply.rs  create.rs  diff.rs  merge.rs  metadata.rs  show.rs
src/utils/: fs.rs  hash.rs  mod.rs
tests/: patch_tests.rs
