[package]
name = "bin_diff_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
similar = "2"


[[bin]]
name = "dft"
path = "src/bin/cli/main.rs"

[[bin]]
name = "mc_updater"
path = "src/bin/plugins/mc_updater/main.rs"
